--- a/src/index.css
+++ b/src/index.css
@@ -62,3 +62,8 @@ button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
+@layer base {
+  :root {
+    --radius: 0.5rem;
+  }
+}
