--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
   width: 100vw;
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #575151;
+  background-color: #f0f7f4;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -20,15 +20,6 @@
 #root {
   width: 100%; /* Ensure the root div takes full width */
   height: 100vh; /* Ensure the root div takes full height */
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
 }
 
 body {
@@ -55,7 +46,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #1ea16b;
 }
 button:focus,
 button:focus-visible {
