--- a/src/index.css
+++ b/src/index.css
@@ -58,6 +58,31 @@ button:focus-visible {
   }
 }
 
-.leaflet-pane {
+body {
+  font-family: 'Montserrat', sans-serif;
+}
+
+*/ .leaflet-pane {
   z-index: 1 !important; /* Lower the z-index */
 }
+
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #f0f7f4; /* Match your background color */
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.2); /* Customize the thumb (scroll handle) color */
+  border-radius: 6px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(0, 0, 0, 0.4); /* Darken the thumb on hover */
+}
+
+/* Scrollbar styling for Firefox */
+scrollbar-color: rgba(0, 0, 0, 0.2) #f0f7f4;
+scrollbar-width: thin;
